Dockefile included to the project